# winter_research_brownian_motion_optical_tweezers

./: .gitignore  AI_USAGE.md  README.md  common.py  entry_problem.py  entry_problem_1d.py  entry_problem_2d.py  entry_problem_3d.py  exit_problem.py  exit_problem_1d.py  exit_problem_2d.py  exit_problem_3d.py  geometry_beam.py  pyproject.toml  requirements.txt
report/: report.aux  report.out  report.tex  report.toc
scripts/: validate_day1.py  validate_day2.py  validate_phase1.py  validate_phase2.py  validate_phase3.py  validate_phase4.py
src/: analytics.py  analytics_axisym.py  analytics_escape.py  current.py  entry.py  escape.py  forces.py  fp_1d.py  fp_axisym.py  fp_nc.py  langevin.py  langevin_axisym.py  langevin_escape.py  params.py
tests/: test_analytics_escape.py  test_current.py  test_entry.py  test_escape.py  test_forces.py  test_fp1d.py  test_fp_axisym.py  test_fp_nc.py  test_gaussian_beam.py  test_langevin.py  test_langevin_axisym.py  test_langevin_escape.py  test_langevin_nc.py
